Fix - Fixes z-index issue of heading peeking over mobile menu

--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -304,7 +304,7 @@
         order: 2;
         justify-self: start;
         align-self: start;
-        z-index: 10;
+        z-index: 9;
         grid-row: 2/3;
         padding-right: $grid-mobile-margin;
 
